[project]
name = "pipeline-dados"
version = "0.1.0"
description = "Pipeline de dados com Airflow, DBT, Streamlit e PostgreSQL"
authors = [
    {name = "Wendel", email = "delldev7@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.9.7 || >3.9.7,<3.12"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
pyarrow = ">=10.0.1,<10.1.0"
sqlalchemy = ">=1.4.28,<2.0"
psycopg2-binary = ">=2.9.10"
dbt-core = "~=1.7.0"
dbt-postgres = "~=1.7.0"
apache-airflow = "~=2.7.3"
python-dotenv = "^1.1.0"
cryptography = "^44.0.2"
httpx = "^0.28.1"
streamlit = "^1.45.0"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
